# Reportrick

./: .dockerignore  .gitignore  Dockerfile  Eugen_Maksymenko_Doku.docx  README.md  docker-compose.yml  requirements.txt  setup.cfg  setup.py
database/: reportic_database.sqlite
ihk_docs/: Eugen_Maksymenko_text_final.docx
template/: header_content.html  layout_workreport.html  style.css
test_files/: est.py  odl_database.py
test_files/database/: reportic_database.sqlite
work_report/: jinja_workreport.html
workreport/: jinja_workreport.html
