[metadata]
name = reportrick
version = 0.1.0
description = "Create weekly reports"
long_description = file: README.md
long_description_content_type = text/markdown
author = Eugen Maksymenko
author_email = eugen.maksymenko@gmx.de
url = https://github.com/EMaksy/reportrick
download_url = https://github.com/EMaksy/reportrick/download
classifiers =
  # See https://pypi.org/pypi?%3Aaction=list_classifiers
  Development Status :: 1 - Planning
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
license_file =  LICENSE

[sdist]
formats = bztar, zip

[tool:pytest]
minversion = 3.0
testpaths= tests/
addopts = --cov=reportrick --cov-report=term-missing
[options]
scripts =
    bin/reportrick.py,
    bin/reportrick_generate.py,
    bin/reportrick_database_class.py

python_requires = >=3.*.*
include_package_data = True

